# veld

./: .gitignore  Cargo.toml  Dioxus.toml  PROGRESS.md  README.md  UI_DESIGN_ANALYSIS.md  drift-progress.md  input.css  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  veld-progress.md
.claude/: CLAUDE.md  settings.json  statusline.ps1  templates.md
.claude/agents/: debugging-assistant.md
.claude/commands/: add-rule.md  analyze-doc.md  deslop.md  doc-init.md  response-style.md
.claude/custom/: statusline.ps1
.claude/custom/env-switch/: README.md  env.example.json  index.tsx
.claude/env-switch/: README.md  index.js
.claude/rules/: builtin-tools.md  comment-tags.md  language.md  shell-path-format.md  tools-priority.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/doc-analyzer/: SKILL.md
.claude/skills/product-manager/: SKILL.md
assets/: floating_input.css  main.css  styles.css
docs/: DIoxus_Desktop_API_QuickRef.md  index.md
src/: chat_history.rs  main.rs  routes.rs  shortcuts.rs  theme.rs  tray.rs  window_manager.rs
src/components/: about.rs  ai_config.rs  floating_input.rs  home.rs  layout.rs  markdown.rs  mcp_config.rs  mod.rs  result_viewer.rs  settings.rs
src/components/chat/: handlers.rs  header.rs  hooks.rs  input_area.rs  message_list.rs  mod.rs  sidebar.rs
src/components/settings_tabs/: ai_providers.rs  appearance.rs  mcp_servers.rs  mod.rs  shortcuts.rs
src/components/ui/: badge.rs  button.rs  card.rs  input.rs  mod.rs  modal.rs  tabs.rs
src/config/: mod.rs
src/services/: ai_client.rs  mcp_agent.rs  mcp_client.rs  mod.rs
