[package]
name = "veld"
version = "0.1.0"
authors = ["jk278 <g1169861954@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dioxus
dioxus = { version = "0.7.1", features = ["signals"] }
dioxus-desktop = "0.7.1"
dioxus-signals = "0.7.1"
dioxus-hooks = "0.7.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System Tray & Global Shortcuts
winit = "0.30"

# Clipboard
clipboard = "0.5"

# HTTP client (for AI APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Notification
notify-rust = "4.5"

# File watching
notify = "6.1"

# Utilities
once_cell = "1.20"

# For system theme detection
dioxus-sdk = { version = "0.7", features = ["window"] }

# Note: dioxus-primitives v0.0.0 is a placeholder package with no actual components
# We've implemented our own theme system with Tailwind 4.0 instead
# For a real component library, consider using:
# - adui-dioxus = "0.1.2" (Ant Design port)

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dev-dependencies]
tokio-test = "0.4"
