[package]
name = "veld"
version = "0.1.0"
authors = ["jk278 <g1169861954@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dioxus Core
dioxus = { version = "0.7.1", features = ["signals"] }
# Dioxus Desktop includes these built-in dependencies (DO NOT add separately):
# - tao v0.34.5: Window management (winit fork)
# - wry v0.53.5: Web rendering engine
# - tray-icon v0.21.2: System tray support
# - global-hotkey v0.7.0: Global keyboard shortcuts
# - muda v0.17.1: Menu bar support
# - tokio v1.48+: Async runtime
dioxus-desktop = "0.7.1"

# Serialization (JSON configuration files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard (Note: dioxus-clipboard 0.3.0 incompatible with Dioxus 0.7)
# Use standard clipboard crate for cross-platform support
clipboard = "0.5"

# HTTP client for AI APIs (OpenAI, Anthropic, etc.)
# IMPORTANT: Only needed if NOT using dioxus-fullstack
# - If using fullstack features: dioxus = { version = "0.7.1", features = ["fullstack"] }
#   (fullstack includes reqwest automatically)
# - For desktop-only apps: must add reqwest manually
reqwest = { version = "0.12", features = ["json", "stream"] }

# Desktop notifications
notify-rust = "4.5"

# File system monitoring (watch config changes)
notify = "6.1"

# Note: Replaced once_cell with std::sync::OnceLock (Rust 1.70+)
# We've implemented our own theme system with pure Dioxus instead
# For a real component library, consider using:
# - adui-dioxus = "0.1.2" (Ant Design port)

[features]
# Platform targets (enable one or more)
default = ["desktop"]  # Build for desktop by default
web = ["dioxus/web"]   # WebAssembly target
desktop = ["dioxus/desktop"]  # Native desktop (Windows/macOS/Linux)
mobile = ["dioxus/mobile"]    # Mobile target (iOS/Android)

[dev-dependencies]
# Async runtime testing utilities (uses tokio from dioxus-desktop)
tokio-test = "0.4"
