[package]
name = "veld"
version = "0.1.0"
authors = ["jk278 <g1169861954@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dioxus Core
dioxus = { version = "0.7", features = ["router"] }
# Dioxus Desktop includes these built-in dependencies (DO NOT add separately):
# - tao v0.34: Window management (winit fork)
# - wry v0.53: Web rendering engine
# - tray-icon v0.21: System tray support
# - global-hotkey v0.7: Global keyboard shortcuts
# - muda v0.17: Menu bar support
# - tokio v1.48: Async runtime
dioxus-desktop = "0.7"

# Async utilities (futures stream support)
futures-util = "0.3"

# Serialization (JSON configuration files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Time handling
chrono = "0.4"

# Directory utilities for cross-platform config paths
dirs = "6.0"

# Clipboard (arboard replaces the unmaintained clipboard crate)
arboard = { version = "3.6", features = ["wayland-data-control"] }

# HTTP client for AI APIs (OpenAI, Anthropic, etc.)
# IMPORTANT: Only needed if NOT using dioxus-fullstack
# - If using fullstack features: dioxus = { version = "0.7", features = ["fullstack"] }
#   (fullstack includes reqwest automatically)
# - For desktop-only apps: must add reqwest manually
reqwest = { version = "0.12", features = ["json", "stream"] }

# Desktop notifications
notify-rust = "4.11"

# File system monitoring (watch config changes)
notify = "8.2"

# Markdown parsing for chat messages (with tables support)
# pulldown-cmark 0.12: table, strikethrough, tasklist are controlled by Options, not features
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Note: Replaced once_cell with std::sync::OnceLock (Rust 1.70+)
# We've implemented our own theme system with pure Dioxus instead
# For a real component library, consider using:
# - adui-dioxus = "0.1" (Ant Design port)

[features]
# Platform targets (enable one or more)
default = ["desktop"]        # Build for desktop by default
web = ["dioxus/web"]         # WebAssembly target
desktop = ["dioxus/desktop"] # Native desktop (Windows/macOS/Linux)
mobile = ["dioxus/mobile"]   # Mobile target (iOS/Android)

[dev-dependencies]
# Async runtime testing utilities (uses tokio from dioxus-desktop)
tokio-test = "0.4"
